name:           blif
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/foshardware/blif#readme>
homepage:       https://github.com/foshardware/blif#readme
bug-reports:    https://github.com/foshardware/blif/issues
author:         Andreas Westerwick
maintainer:     westerwick@pconas.de
copyright:      2019 Andreas Westerwick
license:        BSD3
license-file:   LICENSE
extra-source-files:
    README.md
    ChangeLog.md

build-type:    Simple
cabal-version: >= 1.10


source-repository head
  type: git
  location: https://github.com/foshardware/blif

library
  exposed-modules:
      Language.BLIF.Builder
      Language.BLIF.Lexer
      Language.BLIF.Parser
      Language.BLIF.Syntax
      Language.BLIF.Tokens
  other-modules:
      Paths_blif
  build-tools:
      alex
    , happy
  hs-source-dirs:
      src
  build-depends:
      array
    , base >=4.7 && <5
    , parsec
    , text
  default-language: Haskell2010
